# luminary

./: .gitignore  README.md  pyproject.toml
asm/: README.md
docs/: AI_INTEGRATION.md  ARCHITECTURE.md  HARDWARE.md  ROADMAP.md
examples/: descent_demo.py
src/luminary/: __init__.py  __main__.py
src/luminary/ai/: __init__.py  bnn.py
src/luminary/devices/: __init__.py  bus.py  console.py  imu.py  timer.py
src/luminary/kernel/: __init__.py  executive.py  memory_map.py  scheduler.py
src/luminary/mission/: __init__.py  ascii_view.py  campaign.py  input.py  live.py  scenes.py
src/luminary/vm/: __init__.py  cpu.py  memory.py  word.py
tests/: test_ai_budget.py  test_ascii_view.py  test_campaign_auto.py  test_cpu.py  test_memory.py  test_scheduler.py  test_word.py
tools/: pack_rope.py
